[tool.poetry]
name = "gmaps"
version = "0.1.0"
description = ""
authors = ["Rhuan Lima <rhuan@rhuanlima.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
googlemaps = "^4.5.3"
pandas = "^1.3.4"
requests = "^2.26.0"
python-dotenv = "^0.19.1"
typed-ast = "^1.4.3"
importlib-metadata = "^4.8.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
